// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fret component boxes type, snapshot 1`] = `
<styled.div>
  <BoxesFret
    note="E2"
    showNotes={true}
  />
</styled.div>
`;

exports[`Fret component strings type, snapshot 1`] = `
<styled.div>
  <StringsFret
    note="E2"
    showNotes={false}
  />
</styled.div>
`;
